syntax = "proto3";

message IFT {
  string url_template = 1;
  string base_patch = 2;
  repeated SubsetMapping subset_mapping = 3;
  repeated CombinedSubsetMapping combined_subset_mapping = 4;
  // next = 5
}

message SubsetMapping {
  // KEY
  uint32 bias = 1;
  bytes codepoint_set = 2;
  // TODO: features, design space

  // VALUE
  uint32 id = 3;
}

message CombinedSubsetMapping {
  // KEY
  repeated uint32 subset_indices = 1;

  // TODO: support adding features here

  // VALUE
  uint32 id = 2;
}